# thesis_cot_faithful

./: .gitignore  Analysis.ipynb  Analysis2.ipynb  EDA.ipynb  LICENSE  README.md  data_set.ipynb  gpqa_diamond.ipynb  requirements.txt  results_display.ipynb
ollama_project/: Dockerfile  pyproject.toml  start.sh
ollama_project/llama_deepseek.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ollama_project/src/: chat.py  config.py  main.py  utils.py
outputs/: 1:8b_causal_judgment.json  1:8b_date_understanding.json  1:8b_disambiguation_qa.json  deepseek-r1:671b_hyperbaton.json  deepseek-r1:671b_logic_four_all.json  deepseek-r1:671b_logic_four_all_zero.json  deepseek-r1:671b_logic_zfive_all.json  deepseek-r1:671b_logic_zfive_all_zero.json  deepseek-r1:671b_qpqa_all.json  deepseek-r1_671b_causal_judgment.json
outputs_small/: deepseek-r1:8b_hyperbaton.json  deepseek-r1:8b_hyperbaton_conf.json  deepseek-r1:8b_hyperbaton_sus.json  deepseek-r1:8b_hyperbaton_syco.json  deepseek-r1:8b_logic_four_all.json  deepseek-r1:8b_logic_four_all_zero.json  deepseek-r1:8b_logical_deduction_five_objects_all.json  deepseek-r1:8b_qpqa_all.json  deepseek-r1:8b_ruin_names_all.json  llama_1:8b_hyperbaton_sus.json
scripts/: test.py
