[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama_deepseek"
version = "0.1.0"
description = "Chaos"
readme = "README.md"
authors = [{name = "Sanna", email = "ccor@itu.dk"}]
license = {text = "MIT"}
dependencies = [
    "ollama==0.4.4",
    "python-dotenv==1.0.0",
]

[project.scripts]
start-chat = "src.main:main"
run-tests = "src.main:run_tests"

[tool.setuptools]
packages = ["src"]
